log/build_2024-04-22_12-34-44/uav_urdf_demo/stdout_stderr.log
[35m[1mScanning dependencies of target state_publisher[0m
[ 50%] [32mBuilding CXX object CMakeFiles/state_publisher.dir/src/state_publisher.cpp.o[0m
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp: In constructor ‘StatePublisher::StatePublisher()’:
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp:28:93: error: no matching function for call to ‘StatePublisher::create_wall_timer(int, std::_Bind_helper<false, void (StatePublisher::*)(), StatePublisher*>::type)’
   28 |         timer = this->create_wall_timer(30, std::bind(&StatePublisher::timer_callback, this));
      |                                                                                             ^
In file included from /opt/ros/galactic/include/rclcpp/executors/single_threaded_executor.hpp:28,
                 from /opt/ros/galactic/include/rclcpp/executors.hpp:22,
                 from /opt/ros/galactic/include/rclcpp/rclcpp.hpp:156,
                 from /home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp:8:
/opt/ros/galactic/include/rclcpp/node.hpp:248:3: note: candidate: ‘template<class DurationRepT, class DurationT, class CallbackT> typename rclcpp::WallTimer<CallbackT>::SharedPtr rclcpp::Node::create_wall_timer(std::chrono::duration<_Rep1, _Period1>, CallbackT, rclcpp::CallbackGroup::SharedPtr)’
  248 |   create_wall_timer(
      |   ^~~~~~~~~~~~~~~~~
/opt/ros/galactic/include/rclcpp/node.hpp:248:3: note:   template argument deduction/substitution failed:
/home/ccl/ros2_ws/uav_urdf_demo/src/state_publisher.cpp:28:93: note:   mismatched types ‘std::chrono::duration<_Rep1, _Period1>’ and ‘int’
   28 |         timer = this->create_wall_timer(30, std::bind(&StatePublisher::timer_callback, this));
      |                                                                                             ^
make[2]: *** [CMakeFiles/state_publisher.dir/build.make:63: CMakeFiles/state_publisher.dir/src/state_publisher.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:78: CMakeFiles/state_publisher.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
